# sp4e_fftw

./: README.md
src/: .clang-format-7  CMakeLists.txt  compute.hh  compute_boundary.cc  compute_boundary.hh  compute_contact.cc  compute_contact.hh  compute_energy.hh  compute_gravity.cc  compute_gravity.hh  compute_interaction.hh  compute_kinetic_energy.cc  compute_kinetic_energy.hh  compute_potential_energy.cc  compute_potential_energy.hh  compute_temperature.cc  compute_temperature.hh  compute_verlet_integration.cc  compute_verlet_integration.hh  csv_reader.cc  csv_reader.hh  csv_writer.cc  csv_writer.hh  fft.hh  main.cc  material_point.cc  material_point.hh  material_points_factory.cc  material_points_factory.hh  matrix.hh  my_types.hh  particle.cc  particle.hh  particles_factory_interface.cc  particles_factory_interface.hh  ping_pong_ball.cc  ping_pong_ball.hh  ping_pong_balls_factory.cc  ping_pong_balls_factory.hh  planet.hh  (+12 more)
src/.kdev4/: src.kdev4
